# feed-brain

./: .env.example  .gitignore  README.md  feeds.toml  pyproject.toml
src/feed_brain/: __init__.py  __main__.py  config.py  models.py
src/feed_brain/db/: __init__.py  models.py  session.py
src/feed_brain/services/: __init__.py  classifier.py  clipping.py  extractor.py  fetcher.py  opml.py
src/feed_brain/web/: __init__.py  app.py  routes.py
src/feed_brain/web/static/css/: style.css
src/feed_brain/web/templates/: article.html  base.html  feed.html  feeds.html
src/feed_brain/web/templates/partials/: article_card.html  feed_list_table.html
tests/: conftest.py  test_classifier.py  test_clipping.py  test_db.py  test_fetcher.py  test_opml.py
